<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="streamer_app">Spotify Streamer</string>
    <string name="scorers_app">Scorers App</string>
    <string name="lib_app">Library App</string>
    <string name="bib_app">Build It Bigger</string>
    <string name="xyz_reader_app">XYZ Reader</string>
    <string name="capstone_mya">Capstone: My Own App</string>
    <string name="list_title">My Nanodegree Apps !</string>
</resources>
