<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@color/lightskyblue"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/title_text"
        android:text="@string/list_title"
        android:paddingLeft="55dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="45dp"
            android:paddingRight="45dp">

            <Button
                android:id="@+id/streamer_app"
                style="@style/MyButtonStyle"
                android:text="@string/streamer_app"
                android:onClick="showStreamerToast"
                />

            <Button
                style="@style/MyButtonStyle"
                android:id="@+id/scorers_app"
                android:text="@string/scorers_app"
                android:onClick="showScorersToast"
                />

            <Button
                style="@style/MyButtonStyle"
                android:id="@+id/lib_app"
                android:text="@string/lib_app"
                android:onClick="showLibToast"
                />

            <Button
                style="@style/MyButtonStyle"
                android:id="@+id/bib_app"
                android:text="@string/bib_app"
                android:onClick="showBibToast"
                />

            <Button
                style="@style/MyButtonStyle"
                android:id="@+id/xyz_reader_app"
                android:text="@string/xyz_reader_app"
                android:onClick="showXyzReaderToast"
                />

            <Button
                style="@style/MyButtonStyle"
                android:id="@+id/capstone_mya"
                android:background="@color/red"
                android:text="@string/capstone_mya"
                android:onClick="showCapstoneToast"
                />


        </LinearLayout>

    </ScrollView>




</LinearLayout>
